<resources>
    <string name="app_name">News Bot</string>
    <string name="loading_text">Loading</string>
    <string name="clear">Clear</string>
    <string name="news_label">News</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news_info">News Info</string>
    <string-array name="inputcategoryselectionenteries">
        <item>Entertainment</item>
        <item>Business</item>
        <item>Gaming</item>
        <item>General</item>
        <item>Music</item>
        <item>Politics</item>
        <item>Science-and-nature</item>
        <item>Sport</item>
        <item>Technology</item>
    </string-array>


    <string name="greeting_msg_from_bot">Hello I m your friendly bot. I will help you to find live news headlines.</string>
    <string name="error_message_from_bot">I will help you to find news from below categories. Please select any one from below:</string>
    <string name="view_result_news">View News</string>
    <string name="general_category">general</string>
    <string name="entertainment_category">entertainment</string>
    <string name="gaming_category">gaming</string>
    <string name="music_category">music</string>
    <string name="politics_category">politics</string>
    <string name="science_nature_category">Science-and-nature</string>
    <string name="sport_category">sport</string>
    <string name="sports_category">sports</string>
    <string name="technology_category">technology</string>
    <string name="business_category">business</string>
    <string name="nature_category">Nature</string>
    <string name="science_category">science</string>
    <string name="channelid_for_general_category">abc-news-au</string>
    <string name="channelid_for_entertainment_category">buzzfeed</string>
    <string name="channelid_for_gaming_category">ign</string>
    <string name="channelid_for_music_category">mtv-news</string>
    <string name="channelid_for_politics_category">breitbart-news</string>
    <string name="channelid_for_science_nature_category">national-geographic</string>
    <string name="channelid_for_sport_category">espn</string>
    <string name="channelid_for_technology_category">hacker-news</string>
    <string name="channelid_for_business_category">the-economist</string>
    <string name="select_category_msg">I did not get you. Please ask news for Sports, General, Entertainment, Buisness, Gaming, Music, Technology, Science-and-nature and Politics.</string>
    <string name="start_conversation_message">Hi m your friendly bot. You can ask news for Sports, General, Entertainment, Buisness, Gaming, Music, Technology, Science-and-nature and Politics.</string>
    <string name="bot">bot</string>
    <string name="conversation_start_message">Hi</string>
    <string name="preference_file_key">myprefs</string>
    <string name="fist_time_start">appfirsttimestart</string>
    <string name="user">user</string>
    <string name="source_url_key">sourceurl</string>
    <string name="title_key">title</string>
    <string name="addunitid">ca-app-pub-3940256099942544/1033173712</string>
    <string name="news_value">News Headlines</string>
    <string name="empty_stock_list">No Data!</string>
    <string name="selected_channel_for_news_result">selectedchannelfornewsresult</string>
    <string name="chat_screen">ChatScreen</string>
    <string name="news_article_list">NewsArticleList</string>
    <string name="news_detail">NewsDetail</string>
    <string name="news_logo_icon">News Article Logo</string>
    <string name="no_data_available">Unable to retrieve data. Please try agin later.</string>
    <string name="no_internet_connectivity">No Internet. Please connect to internet.</string>
    <string name="selected_channel_key">selectedchannel</string>
    <string name="action">Action</string>
    <string name="newsresult">viewnewsresult</string>
    <string name="send_message_action">sendmessage</string>
    <string name="input_category">inputcategory</string>
    <string name="view">View</string>
    <string name="news">News</string>
    <string name="none">none</string>
    <string name="type_msg">type message</string>
    <string name="send_message">Send Message</string>
</resources>
